--- a/GDRouting-Example/GDRouting-Example/Base.lproj/Main.storyboard
+++ b/GDRouting-Example/GDRouting-Example/Base.lproj/Main.storyboard
@@ -42,20 +42,20 @@
         <scene sceneID="4K8-bg-ZZm">
             <objects>
                 <tableViewController storyboardIdentifier="MainMenuTableViewController" id="nTE-F7-idt" customClass="MainMenuTableViewController" sceneMemberID="viewController">
-                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="65" sectionHeaderHeight="22" sectionFooterHeight="22" id="QJz-Fs-PMF">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="54" sectionHeaderHeight="22" sectionFooterHeight="22" id="QJz-Fs-PMF">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="383"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="MainMenuTableCell" id="Aci-sB-1Xi" customClass="MainMenuTableViewCell">
-                                <rect key="frame" x="0.0" y="22" width="320" height="65"/>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="MainMenuTableCell" rowHeight="54" id="Aci-sB-1Xi" customClass="MainMenuTableViewCell">
+                                <rect key="frame" x="0.0" y="22" width="320" height="54"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Aci-sB-1Xi" id="hFY-1p-tkF">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="65"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="54"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X25-cQ-oQm">
-                                            <rect key="frame" x="62" y="22" width="238" height="21"/>
+                                            <rect key="frame" x="62" y="16" width="238" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
                                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
@@ -68,14 +68,26 @@
                                     <outlet property="menuItemLabel" destination="X25-cQ-oQm" id="JXz-3Y-JUg"/>
                                 </connections>
                             </tableViewCell>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MainMenuTableHeaderCell" id="Lp8-qU-z8O">
-                                <rect key="frame" x="0.0" y="87" width="320" height="65"/>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="MainMenuTableHeaderCell" rowHeight="54" id="Lp8-qU-z8O" customClass="MainMenuTableViewCell">
+                                <rect key="frame" x="0.0" y="76" width="320" height="54"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Lp8-qU-z8O" id="Otk-wz-6xC">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="65"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="54"/>
                                     <autoresizingMask key="autoresizingMask"/>
-                                    <color key="backgroundColor" red="1" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                    <subviews>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HA0-pm-Vmt">
+                                            <rect key="frame" x="62" y="16" width="238" height="21"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
+                                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="menuItemLabel" destination="HA0-pm-Vmt" id="Wfs-M1-KM3"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -103,7 +115,7 @@
             </objects>
             <point key="canvasLocation" x="332" y="-207"/>
         </scene>
-        <!--Manatee View Controller-->
+        <!--Manatee View Controller - Manatees-->
         <scene sceneID="rqP-lu-7z9">
             <objects>
                 <viewController id="fhw-sV-1QF" customClass="ManateeViewController" sceneMemberID="viewController">
@@ -122,7 +134,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="FdD-rr-k45">
+                    <navigationItem key="navigationItem" title="Manatees" id="FdD-rr-k45">
                         <barButtonItem key="leftBarButtonItem" title="Menu" id="ROG-8b-Guh">
                             <connections>
                                 <action selector="menuButtonClicked:" destination="fhw-sV-1QF" id="khn-C1-mHT"/>
@@ -134,7 +146,7 @@
             </objects>
             <point key="canvasLocation" x="850" y="-200"/>
         </scene>
-        <!--Cat View Controller - Title-->
+        <!--Cat View Controller - Cats-->
         <scene sceneID="3ON-Ui-Gnm">
             <objects>
                 <viewController storyboardIdentifier="CatViewController" id="9W7-m8-WiA" customClass="CatViewController" sceneMemberID="viewController">
@@ -154,7 +166,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" title="Title" id="LW5-Cc-z6Y">
+                    <navigationItem key="navigationItem" title="Cats" id="LW5-Cc-z6Y">
                         <barButtonItem key="leftBarButtonItem" title="Menu" id="0mr-AW-zUp">
                             <connections>
                                 <action selector="menuButtonClicked:" destination="9W7-m8-WiA" id="cDt-v7-wHD"/>
@@ -168,7 +180,7 @@
             </objects>
             <point key="canvasLocation" x="1248" y="-191"/>
         </scene>
-        <!--Dog View Controller - Title-->
+        <!--Dog View Controller - Dogs-->
         <scene sceneID="tEE-0S-ndR">
             <objects>
                 <viewController storyboardIdentifier="DogViewController" id="zKv-p8-UWr" customClass="DogViewController" sceneMemberID="viewController">
@@ -187,7 +199,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Title" id="ATz-Hf-ewF">
+                    <navigationItem key="navigationItem" title="Dogs" id="ATz-Hf-ewF">
                         <barButtonItem key="leftBarButtonItem" title="Close" id="a1h-2i-lnb">
                             <connections>
                                 <action selector="dismissModalViewController:" destination="zKv-p8-UWr" id="MEu-Bh-ebO"/>
@@ -198,13 +210,46 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oUe-Wh-eXI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1235" y="472"/>
+            <point key="canvasLocation" x="671" y="551"/>
+        </scene>
+        <!--Dog View Controller - Moar Dogs-->
+        <scene sceneID="bAC-6B-lME">
+            <objects>
+                <viewController storyboardIdentifier="MoarDogViewController" id="gOo-fx-Tar" customClass="DogViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="P6c-Dv-scr"/>
+                        <viewControllerLayoutGuide type="bottom" id="uqX-5O-dx4"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="2m7-Sb-66h">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="smiledog.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="egM-H0-4yw">
+                                <rect key="frame" x="0.0" y="82" width="320" height="444"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Moar Dogs" id="FkX-Ys-G4a">
+                        <barButtonItem key="leftBarButtonItem" title="Close" id="ENt-FG-loH">
+                            <connections>
+                                <action selector="dismissModalViewController:" destination="gOo-fx-Tar" id="B9y-UD-tio"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3Kv-93-hX1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1112" y="558"/>
         </scene>
     </scenes>
     <resources>
         <image name="cat.jpg" width="500" height="578"/>
         <image name="dog.jpg" width="550" height="733"/>
         <image name="manatee.jpg" width="261" height="193"/>
+        <image name="smiledog.jpg" width="480" height="571"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
